styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --primary-color: #16a34a;
  --primary-color-dark: #dcfce7;
  --secondary-color: #22c55e;
  --text-dark: #064e3b;
  --text-light: #374151;
  --white: #ffffff;
  --max-width: 1200px;
  --gradient-1: linear-gradient(to bottom, #f0fdf4, #dcfce7);
  --gradient-2: linear-gradient(to bottom, #4ade80, #22c55e);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.section__container {
  max-width: var(--max-width);
  margin: auto;
  padding: 5rem 1rem;
}

.section__header {
  margin-bottom: 1rem;
  font-size: 2.5rem;
  font-weight: 400;
  color: var(--text-dark);
  line-height: 3rem;
  text-align: center;
}

.section__description {
  color: var(--text-light);
  text-align: center;
}

.btn {
  padding: 0.75rem 1.5rem;
  outline: none;
  border: none;
  font-size: 1rem;
  white-space: nowrap;
  color: var(--white);
  background-color: var(--secondary-color);
  border-radius: 5rem;
  transition: 0.3s;
  cursor: pointer;
}

.logo {
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--primary-color);
}

img {
  display: flex;
  width: 100%;
}

a {
  text-decoration: none;
  transition: 0.3s;
}

ul {
  list-style: none;
}

html,
body {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: var(--primary-color-dark);
}

nav {
  position: fixed;
  isolation: isolate;
  width: 100%;
  max-width: var(--max-width);
  margin-inline: auto;
  z-index: 9;
}

.nav__header {
  padding: 1rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-image: var(--gradient-1);
}

.nav__menu__btn {
  font-size: 1.5rem;
  color: var(--primary-color);
  cursor: pointer;
}

.nav__links {
  position: absolute;
  top: 64px;
  left: 0;
  width: 100%;
  padding: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 2rem;
  background-image: var(--gradient-1);
  transition: 0.5s;
  z-index: -1;
  transform: translateY(-100%);
}

.nav__links.open {
  transform: translateY(0);
}

.nav__links a {
  color: var(--text-light);
}

.nav__links a:hover {
  color: var(--secondary-color);
}

.nav__btns {
  display: none;
}

.header__container {
  display: grid;
  gap: 0 2rem;
  overflow: hidden;
}

.header__image img {
  max-width: 400px;
  margin-inline: auto;
  border-radius: 15rem;
}

.header__container h1 {
  font-size: 4rem;
  font-weight: 400;
  line-height: 4.5rem;
  color: var(--text-dark);
  text-align: center;
}

.header__content .section__description {
  margin-block: 1rem 2rem;
}

.header__btns {
  margin-bottom: 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.header__btns .btn {
  display: flex;
  align-items: center;
  gap: 10px;
}

.header__btns .btn span {
  font-size: 1.25rem;
  color: var(--text-dark);
  transition: 0.3s;
}

.header__btns .btn:hover span {
  transform: translateX(5px);
}

.header__btns a {
  display: flex;
  align-items: center;
  gap: 10px;
  color: var(--text-light);
}

.header__btns a:hover {
  color: var(--secondary-color);
}

.header__btns a span {
  transition: 0.3s;
}

.header__btns a:hover span {
  transform: translateX(5px);
}

.header__stats {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.header__stats__card {
  min-width: 150px;
  padding: 1.5rem 2rem;
  text-align: center;
  background-image: var(--gradient-1);
  border-radius: 1rem;
}

.header__stats__card h4 {
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  font-weight: 400;
  color: var(--text-dark);
}

.header__stats__card p {
  font-size: 0.9rem;
  color: var(--text-light);
}

.genre__grid {
  margin-top: 4rem;
  display: grid;
  gap: 2rem 1rem;
}

.genre__card {
  max-width: 300px;
  margin-inline: auto;
}

.genre__image {
  margin-bottom: 1rem;
  position: relative;
  isolation: isolate;
  border-radius: 10rem;
  overflow: hidden;
}

.genre__image img {
  max-width: 300px;
  margin-inline: auto;
}

.genre__link {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: grid;
  place-content: center;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  transition: 0.3s;
  z-index: 1;
}

.genre__card:hover .genre__link {
  opacity: 1;
}

.genre__link a {
  padding: 6px 14px;
  font-size: 2rem;
  color: var(--text-dark);
  background-color: var(--secondary-color);
  border-radius: 100%;
}

.genre__card h4 {
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--text-dark);
  text-align: center;
}

.banner__container h2 {
  max-width: 825px;
  margin-inline: auto;
  font-size: 3rem;
  font-weight: 400;
  color: var(--text-dark);
  line-height: 3.75rem;
  text-align: center;
}

.feature__container {
  display: grid;
  gap: 2rem;
  overflow: hidden;
}

.feature__image img {
  padding: 5px;
  max-width: 400px;
  margin-inline: auto;
  border-radius: 1rem 1rem 1rem 10rem;
  border: 2px solid var(--text-light);
}

.feature__list {
  margin-top: 2rem;
  display: grid;
  gap: 1rem;
}

.feature__card {
  padding: 1rem;
  display: flex;
  align-items: center;
  gap: 1rem;
  background-image: var(--gradient-1);
  border-radius: 1rem;
}

.feature__card:hover {
  background-image: var(--gradient-2);
}

.feature__card span {
  font-size: 1.25rem;
  font-weight: 600;
  color: var(--text-dark);
}

.feature__card h4 {
  margin-bottom: 5px;
  font-size: 1.2rem;
  font-weight: 500;
  color: var(--text-dark);
}

.feature__card p {
  color: var(--text-light);
}

.feature__card:hover p {
  color: var(--text-dark);
}

.client__container {
  padding: 5rem 1rem;
}

.swiper {
  margin-top: 4rem;
  width: 100%;
}

.swiper-slide {
  max-width: 400px;
}

.client__card {
  padding: 1.5rem;
  max-width: 400px;
  background-image: var(--gradient-1);
  border-radius: 1rem;
}

.client__ratings {
  margin-bottom: 1rem;
  display: flex;
  align-items: center;
  gap: 5px;
}

.client__ratings span {
  color: gold;
}

.client__ratings span:last-child {
  color: var(--text-light);
}

.client__card p {
  margin-bottom: 2rem;
  color: var(--text-dark);
}

.client__details {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.client__details img {
  max-width: 50px;
  border-radius: 100%;
}

.client__details h4 {
  font-size: 1.2rem;
  font-weight: 600;
  color: var(--text-dark);
}

.client__details h5 {
  font-size: 1rem;
  font-weight: 500;
  color: var(--text-light);
}

.music__content {
  position: relative;
  isolation: isolate;
  overflow: hidden;
  padding: 4rem 1rem;
  background-image: var(--gradient-1);
  border-radius: 1rem;
}

.music__content::before,
.music__content::after {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  aspect-ratio: 1;
  border-radius: 100%;
}

.music__content::before {
  width: 100%;
  max-width: 500px;
  background-image: var(--gradient-2);
  z-index: -1;
}

.music__content::after {
  width: calc(100% - 2rem);
  max-width: 400px;
  background-image: var(--gradient-1);
  z-index: -1;
}

.music__content .section__description {
  margin-bottom: 2rem;
}

.music__btns {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.music__btns .btn {
  display: flex;
  align-items: center;
  gap: 10px;
}

.music__btns .btn span {
  font-size: 1.25rem;
  color: var(--text-dark);
}

.music__btns a {
  display: flex;
  align-items: center;
  gap: 10px;
  color: var(--text-light);
}

.music__btns a:hover {
  color: var(--secondary-color);
}

.footer__links {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem 1rem;
  text-align: center;
}

.footer__logo {
  grid-area: 1/1/2/4;
}

.footer__links li:not(.footer__logo) a {
  color: var(--text-light);
}

.footer__links li:not(.footer__logo) a:hover {
  color: var(--secondary-color);
}

.footer__bar {
  padding: 1rem;
  font-size: 0.9rem;
  color: var(--text-light);
  text-align: center;
}

@media (width > 540px) {
  .header__container h1 {
    font-size: 4.5rem;
    line-height: 6rem;
  }

  .genre__grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (width > 768px) {
  nav {
    position: static;
    padding-block: 2rem 1rem;
    padding-inline: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
  }

  .nav__header {
    flex: 1;
    padding: 0;
    background-image: none;
  }

  .nav__menu__btn {
    display: none;
  }

  .nav__links {
    position: static;
    padding: 0;
    flex-direction: row;
    background-image: none;
    transform: none;
  }

  .nav__btns {
    display: flex;
    flex: 1;
  }

  .header__container {
    grid-template-columns: repeat(4, 1fr);
  }

  .header__container h1 {
    font-size: 5rem;
    line-height: 7rem;
    grid-column: 1/5;
    text-align: left;
  }

  .header__content {
    grid-column: 1/3;
  }

  .header__content .section__description {
    text-align: left;
  }

  .header__btns,
  .header__stats {
    justify-content: flex-start;
  }

  .header__image {
    grid-area: 2/3/3/5;
  }

  .genre__grid {
    grid-template-columns: repeat(4, 1fr);
  }

  .feature__container {
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
  }

  .feature__image {
    grid-area: 1/2/2/3;
  }

  .feature__content .section__header {
    text-align: left;
  }

  .music__content {
    padding: 4rem 2rem;
  }

  .music__content :is(.section__header, .section__description) {
    max-width: 500px;
    text-align: left;
  }

  .music__btns {
    justify-content: flex-start;
  }

  .footer__links {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
  }
}

@media (width > 1024px) {
  .genre__grid {
    gap: 2rem;
  }
}

